--- a/Backend/.env
+++ b/Backend/.env
@@ -2,3 +2,4 @@
 MONGO_URI=mongodb+srv://hadintai312:Bchetgyg16@cluster0.xx33rvl.mongodb.net/?appName=Cluster0
 JWT_SECRET=dajdwdwakdnkawdkw
 PORT=5000   
+BACKEND_URL=http://localhost:8000
